# chemqulacs

./: .gitignore  Makefile  README.md  mypy_files.txt  o.py  pyproject.14.toml  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: doc.yml  macos_ci.yml  ubuntu_ci.yml
chemqulacs/qse/: qse.py
chemqulacs/util/: utils.py
chemqulacs/vqe/: rdm.py  test.py  vqeci.py  vqemcscf.py
doc/source/: .gitignore  conf.py  index.rst
tests/: test_qse.py  test_utils_pubchem.py  test_vqe_vqemcscf.py
tests/vqe/: o.txt  test_rdm.py  test_vqeci.py
